更新prod配置，支持https